--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
     "@types/node": "^20.12.11",
     "@types/react": "^18.3.1",
     "typescript": "^5.4.5"
-  }
+  },
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
+ }
 }
