--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-swipe-to-show",
-  "version": "1.2.1",
-  "description": "Zero-styled swipeable component using react-swipeable for gesture detection, allowing full customization and styling of swiping component and revealed content.",
+  "version": "1.2.4",
+  "description": "Zero-styled swipeable component using react-swipeable for gesture detection compatible with Next.js, allowing full customization and styling of swiping component and revealed content.",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
